--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="logo-title">
-      <img src="/BarnicleBabeLogo2.png" alt="logo">
+      <img src="BarnicleBabeLogo2.png" alt="logo">
       <h1>Barnacle Babe</h1>
   </div>
   <div class="navbar-container">
